--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
+  validate: "^1.6.0"
+  crypto: "^2.0.2+1"
+  http: "^0.11.3+16"
+  shared_preferences: "^0.4.1"
 
 dev_dependencies:
   flutter_test:
